# rbpf

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: main.yml  new.yml
benches/: elf_loader.rs  jit_compile.rs  memory_mapping.rs  vm_execution.rs
cli/: Cargo.toml
cli/src/: main.rs
doc/: bytecode.md
examples/: disassemble.rs  load_elf.rs  to_json.rs  uptime.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  dumb.rs  grammar_aware.rs  semantic_aware.rs  smart-jit-diff.rs  smart.rs  smart_jit_diff.rs  smarter-jit-diff.rs  smarter_jit_diff.rs  verify_semantic_aware.rs
src/: aligned_memory.rs  asm_parser.rs  assembler.rs  bpf_elf.rs  call_frames.rs  debugger.rs  disassembler.rs  ebpf.rs  elf.rs  elf_parser_glue.rs  error.rs  helpers.rs  insn_builder.rs  interpreter.rs  jit.rs  jit_arm64.rs  jit_x86.rs  lib.rs  memory_region.rs  program.rs  relocator.rs  static_analysis.rs  syscalls.rs  verifier.rs  vm.rs  x86.rs
src/elf_parser/: consts.rs  mod.rs  types.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: assembler.rs  common.rs  disassembler.rs  execution.rs  exercise_instructions.rs  misc.rs  noop.sh  ubpf_execution.rs  ubpf_jit_x86_64.rs  ubpf_unified.rs  ubpf_verifier.rs  ubpf_vm.rs  verifier.rs
tests/elfs/: elf.ld  elfs.sh  static.elf  static.ld  strict_header.rs
tests/instr/: alu.instr  bitwise.instr  int_math.instr  jump.instr  load.instr  opcode.instr  shift.instr
