[package]

# Project metadata
name = "solana_rbpf"
version = "0.1.2"
authors = ["Solana Maintainers <maintainers@solana.com>"]

# Additional metadata for packaging
description = "Virtual machine and JIT compiler for eBPF programs"
repository = "https://github.com/solana-labs/rbpf"
readme = "README.md"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0/MIT"

# Packaging directives
include = [
    "src/**",
    "examples/**",
    "tests/**",
    "bench/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]

byteorder = "1.2"
combine = "2.5"
elf = "0.0.10"
elfkit = "0.0.6"
enum-primitive-derive = "0.1"
libc = "0.2"
num-traits = "0.2.5"
time = "0.1"


[dev-dependencies]

json = "0.11"
